--- a/index.html
+++ b/index.html
@@ -26,9 +26,58 @@
         <img class="banner-image" src="images/banner.png" alt="">
     </div>
     </header>
->
     <main>  
-
+        <section class="teams display-flex ">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two architects discuas the project design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="features-title"><span id="quick-list" class="text-gray">Quick list</span> <span id="of-our">of Our</span> <span id="features" class="text-primary">Features</span></h3>
+                <p class="features-description text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary">Explore More</button>
+            </div>
+        </section>
+        <section class="some-facts">
+            <div class="all-up">
+             <h3>Some Facts</h3>
+             <p class="text-gray">
+               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+             </p>
+            </div>
+            <div class="facts-container">
+             <div class="fact-card">
+                <div class="all">
+                <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-nam">Awards Winnings</h5>
+                </div>
+             </div>
+             <div class="fact-card">
+                <div class="all">
+                <img src="images/icons/projects.png" alt="" class="fact-icon">
+                <h4 class="fact-number">1458</h4>
+                <h5 class="fact-nam">Project Finished</h5>
+                </div>
+             </div>
+             <div class="fact-card">
+                <div class="all">
+                <img src="images/icons/customers.png" alt=""class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-nam">Clients Worked</h5>
+                </div>
+             </div>
+             <div class="fact-card">
+                <div class="all">
+                <img src="images/icons/email.png" alt="" class="fact-icon">
+                <h4 class="fact-number">22578</h4>
+                <h5 class="fact-nam">Email Send</h5>
+                </div>
+             </div>
+            </div>
+        </section>
     </main>
     <footer>
 
