--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="work-sans-font">
     <header class="bg-light">
         <nav class="navbar display-flex">
-            <h3 class="brand">G3 Architects</h3>
-            <ul class="nav-links display-flex">                                
+            <h3 class="brand bold">G3 Architects</h3>
+            <ul class="nav-links display-flex ">                                
                 <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link text-gray">About </a></li>
                 <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us </a></li>
@@ -19,8 +19,8 @@
         </nav>
     <div class="banner">
         <div class="banner-content">
-            <h1>Brand New Group of Architects</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="font">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="primary">Explore More</button>
         </div>
         <img class="banner-image" src="images/banner.png" alt="">
@@ -36,14 +36,14 @@
             </div>
             <div class="our-features">
                 <h3 class="features-title"><span id="quick-list" class="text-gray">Quick list</span> <span id="of-our">of Our</span> <span id="features" class="text-primary">Features</span></h3>
-                <p class="features-description text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="features-description text-gray font">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="primary">Explore More</button>
             </div>
         </section>
-        <section class="some-facts">
+        <section class="work-sans-font">
             <div class="all-up">
-             <h3>Some Facts</h3>
-             <p class="text-gray">
+             <h3 class="bold">Some Facts</h3>
+             <p class="text-gray font">
                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
              </p>
             </div>
@@ -76,6 +76,19 @@
                 <h5 class="fact-nam">Email Send</h5>
                 </div>
              </div>
+            </div>
+        </section>
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h3 class="sponsor-titel bold">Our sponsors</h3>
+                <p class="font">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
